# Hasher

./: README.md  config.json  main.py  pyproject.toml
src/: algorithms.py  api.py  engines.py
